feature/3443 update button, dropdown-item, input, modal

--- a/projects/front-components/src/lib/components/badge-info/badge-info.component.scss
+++ b/projects/front-components/src/lib/components/badge-info/badge-info.component.scss
@@ -1,16 +1,17 @@
 .ss-lib-badge-info {
 	display: flex;
 	justify-content: space-between;
+	gap: 14px;
 
-	&__left {
+	&__info-block {
 		display: flex;
 		gap: 16px;
 	}
 
 	&__close {
-		position: absolute;
+		position: relative;
 		right: 12px;
-		top: 12px;
+		bottom: 8px;
 	}
 
 	&__info {
