--- a/projects/front-components/src/lib/components/buttons/base-button/base-button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/base-button/base-button.component.scss
@@ -20,6 +20,10 @@ button.custom-button:not(.only-icon) {
 	flex-grow: 1;
 }
 
+button.custom-button:not(.justify-center) {
+	justify-content: space-between;
+}
+
 button.custom-button:disabled {
 	cursor: default;
 }
