--- a/projects/front-components/src/lib/components/input/input.component.scss
+++ b/projects/front-components/src/lib/components/input/input.component.scss
@@ -6,7 +6,9 @@
 	transition: outline-color 0.3s ease;
 	background: transparent;
 	height: auto;
-	padding: 10px 14px;
+	//padding: 10px 14px;
+	flex-wrap: nowrap;
+	gap: 8px;
 }
 
 .input-field {
