--- a/projects/front-components/src/lib/shared/styles/custom-variables.scss
+++ b/projects/front-components/src/lib/shared/styles/custom-variables.scss
@@ -3,16 +3,17 @@
 /* Mapped */
 :root {
 	/* Light */
-	--border-disabled: var(--grey-600, #d3d3d1);
-	--border-error: var(--red-300, #fda29b);
-	--border-focus: var(--blue-700, #3c92d5);
-	--border-focus-error: var(--red-400, #f97066);
-	--border-primary: var(--grey-500, #dcdcdb);
-	--border-secondary: var(--grey-600, #d3d3d1);
-	--border-secondary-hover: var(--grey-700, #b3b3b1);
-	--border-success: var(--green-300, #75e0a7);
-	--border-tertiary: var(--grey-1100, #353534);
-	--border-warning: var(--yellow-300, #fec84b);
+	/* Mapped */
+	--border-disabled: var(--neutral-600);
+	--border-error: var(--error-300);
+	--border-focus: var(--primary-700);
+	--border-focus-error: var(--error-400);
+	--border-primary: var(--neutral-500);
+	--border-secondary: var(--neutral-600);
+	--border-secondary-hover: var(--neutral-700);
+	--border-success: var(--success-300);
+	--border-tertiary: var(--neutral-1100);
+	--border-warning: var(--warning-300);
 	--effects-shadows-10: #0e0e0e1a;
 	--effects-shadows-14: #0e0e0e24;
 	--effects-shadows-18: #0e0e0e2e;
@@ -21,66 +22,101 @@
 	--effects-shadows-5: #0e0e0e0d;
 	--effects-shadows-6: #0e0e0e0f;
 	--effects-shadows-8: #0e0e0e14;
-	--icon-action: var(--grey-900, #686866);
-	--icon-action-2: var(--grey-900, #686866);
-	--icon-action-hover: var(--grey-1000, #525250);
-	--icon-disabled: var(--grey-700, #b3b3b1);
-	--icon-error: var(--red-600, #d92d20);
-	--icon-information: var(--blue-800, #0b77ca);
-	--icon-on-action: var(--pure-white, #ffffff);
-	--icon-on-disabled: var(--grey-700, #b3b3b1);
-	--icon-on-information: var(--grey-300, #f5f5f4);
-	--icon-primary: var(--grey-1100, #353534);
-	--icon-secondary: var(--grey-500, #dcdcdb);
-	--icon-success: var(--green-600, #079455);
-	--icon-warning: var(--yellow-500, #f79009);
-	--surface-action: var(--blue-800, #0b77ca);
-	--surface-action-4: var(--grey-1300, #191919);
-	--surface-action-hover: var(--blue-900, #095fa2);
-	--surface-action-hover-2: var(--grey-400, #ebebea);
-	--surface-action-hover-3: var(--grey-300, #f5f5f4);
-	--surface-action-hover-4: var(--grey-1100, #353534);
-	--surface-action-pressed: var(--blue-1000, #074779);
-	--surface-action-pressed-2: var(--grey-500, #dcdcdb);
-	--surface-action-pressed-3: var(--grey-400, #ebebea);
-	--surface-action-pressed-4: var(--grey-1000, #525250);
-	--surface-backdrop: var(--grey-1400, #0e0e0e);
-	--surface-disabled: var(--grey-300, #f5f5f4);
-	--surface-disabled-selected: var(--grey-700, #b3b3b1);
-	--surface-information: var(--grey-1200, #1f1f1e);
-	--surface-information-2: var(--blue-300, #f3f8fc);
-	--surface-information-hover-2: var(--blue-400, #e2eff8);
-	--surface-information-selected-2: var(--blue-200, #f7fafd);
-	--surface-page: var(--grey-200, #fafaf9);
-	--surface-primary: var(--pure-white, #ffffff);
-	--surface-secondary: var(--grey-200, #fafaf9);
-	--text-action: var(--grey-900, #686866);
-	--text-action-hover: var(--grey-1000, #525250);
-	--text-body: var(--grey-1300, #191919);
-	--text-body-2: var(--grey-1000, #525250);
-	--text-body-3: var(--grey-900, #686866);
-	--text-body-4: var(--grey-800, #868684);
-	--text-disabled: var(--grey-700, #b3b3b1);
-	--text-error: var(--red-600, #d92d20);
-	--text-headings: var(--grey-1400, #0e0e0e);
-	--text-information: var(--blue-800, #0b77ca);
-	--text-on-action: var(--pure-white, #ffffff);
-	--text-on-disabled: var(--grey-800, #868684);
-	--text-on-information: var(--grey-300, #f5f5f4);
-	--text-on-information-2: var(--grey-500, #dcdcdb);
+	--icon-action-2: var(--neutral-1000);
+	--icon-action-2-on-color: var(--neutral-400);
+	--icon-action-hover-2: var(--neutral-1100);
+	--icon-action-hover-2-on-color: var(--neutral-300);
+	--icon-body: var(--neutral-1500);
+	--icon-body-2: var(--neutral-1000);
+	--icon-body-2-on-color: var(--neutral-600);
+	--icon-body-3: var(--neutral-900);
+	--icon-body-3-on-color: var(--neutral-700);
+	--icon-body-4: var(--neutral-800);
+	--icon-body-4-on-color: var(--neutral-800);
+	--icon-body-on-color: var(--neutral-300);
+	--icon-disabled: var(--neutral-700);
+	--icon-error: var(--error-600);
+	--icon-error-hover: var(--error-700);
+	--icon-headings: var(--neutral-1600);
+	--icon-headings-on-color: var(--neutral-300);
+	--icon-hero: var(--neutral-1600);
+	--icon-hero-on-color: var(--neutral-300);
+	--icon-information: var(--primary-default);
+	--icon-information-hover: var(--primary-900);
+	--icon-on-action: var(--neutral-white);
+	--icon-on-disabled: var(--neutral-800);
+	--icon-placeholder: var(--neutral-700);
+	--icon-placeholder-on-color: var(--neutral-800);
+	--icon-success: var(--success-600);
+	--icon-success-hover: var(--success-700);
+	--icon-warning: var(--warning-500);
+	--icon-warning-hover: var(--warning-600);
+	--surface-action: var(--primary-default);
+	--surface-action-2: var(--neutral-300);
+	--surface-action-3: var(--neutral-200);
+	--surface-action-4: var(--neutral-1500);
+	--surface-action-hover: var(--primary-900);
+	--surface-action-hover-2: var(--neutral-400);
+	--surface-action-hover-3: var(--neutral-300);
+	--surface-action-hover-4: var(--neutral-1100);
+	--surface-action-pressed: var(--primary-1000);
+	--surface-action-pressed-2: var(--neutral-500);
+	--surface-action-pressed-3: var(--neutral-400);
+	--surface-action-pressed-4: var(--neutral-1000);
+	--surface-backdrop: var(--grey-1600);
+	--surface-disabled: var(--neutral-300);
+	--surface-disabled-selected: var(--neutral-700);
+	--surface-error: var(--error-50);
+	--surface-information: var(--primary-300);
+	--surface-information-hover: var(--primary-400);
+	--surface-information-selected: var(--primary-200);
+	--surface-page: var(--neutral-200);
+	--surface-primary: var(--neutral-white);
+	--surface-secondary: var(--neutral-200);
+	--surface-tertiary: var(--neutral-1400);
+	--text-action-2: var(--neutral-1000);
+	--text-action-2-on-color: var(--neutral-400);
+	--text-action-hover-2: var(--neutral-1100);
+	--text-action-hover-2-on-color: var(--neutral-300);
+	--text-body: var(--neutral-1500);
+	--text-body-2: var(--neutral-1000);
+	--text-body-2-on-color: var(--neutral-600);
+	--text-body-3: var(--neutral-900);
+	--text-body-3-on-color: var(--neutral-700);
+	--text-body-4: var(--neutral-800);
+	--text-body-4-on-color: var(--neutral-800);
+	--text-body-on-color: var(--neutral-300);
+	--text-disabled: var(--neutral-700);
+	--text-error: var(--error-600);
+	--text-error-hover: var(--error-700);
+	--text-headings: var(--neutral-1600);
+	--text-headings-on-color: var(--neutral-300);
+	--text-hero: var(--neutral-1600);
+	--text-hero-on-color: var(--neutral-300);
+	--text-information: var(--primary-default);
+	--text-information-hover: var(--primary-900);
+	--text-on-action: var(--neutral-white);
+	--text-on-disabled: var(--neutral-800);
+	--text-placeholder: var(--neutral-700);
+	--text-placeholder-on-color: var(--neutral-800);
+	--text-success: var(--success-600);
+	--text-success-hover: var(--success-600);
+	--text-warning: var(--warning-500);
+	--text-warning-hover: var(--warning-600);
 
 	/* Mapped - Dark */
 	.dark {
-		--border-disabled: var(--grey-900, #686866);
-		--border-error: var(--red-300, #fda29b);
-		--border-focus: var(--blue-700, #3c92d5);
-		--border-focus-error: var(--red-400, #f97066);
-		--border-primary: var(--grey-1100, #353534);
-		--border-secondary: var(--grey-1000, #525250);
-		--border-secondary-hover: var(--grey-900, #686866);
-		--border-success: var(--green-300, #75e0a7);
-		--border-tertiary: var(--grey-500, #dcdcdb);
-		--border-warning: var(--yellow-300, #fec84b);
+		/* Mapped */
+		--border-disabled: var(--neutral-900);
+		--border-error: var(--error-300);
+		--border-focus: var(--primary-700);
+		--border-focus-error: var(--error-400);
+		--border-primary: var(--neutral-1100);
+		--border-secondary: var(--neutral-1000);
+		--border-secondary-hover: var(--neutral-900);
+		--border-success: var(--success-300);
+		--border-tertiary: var(--neutral-500);
+		--border-warning: var(--warning-300);
 		--effects-shadows-10: #00000066;
 		--effects-shadows-14: #0000008f;
 		--effects-shadows-18: #000000b8;
@@ -89,53 +125,87 @@
 		--effects-shadows-5: #00000033;
 		--effects-shadows-6: #0000003d;
 		--effects-shadows-8: #00000052;
-		--icon-action: var(--grey-300, #f5f5f4);
-		--icon-action-2: var(--grey-300, #f5f5f4);
-		--icon-action-hover: var(--grey-500, #dcdcdb);
-		--icon-disabled: var(--grey-700, #b3b3b1);
-		--icon-error: var(--red-400, #f97066);
-		--icon-information: var(--blue-800, #0b77ca);
-		--icon-on-action: var(--pure-white, #ffffff);
-		--icon-on-disabled: var(--grey-700, #b3b3b1);
-		--icon-on-information: var(--grey-1200, #1f1f1e);
-		--icon-primary: var(--pure-white, #ffffff);
-		--icon-secondary: var(--grey-1100, #353534);
-		--icon-success: var(--green-400, #47cd89);
-		--icon-warning: var(--yellow-500, #f79009);
-		--surface-action: var(--blue-800, #0b77ca);
-		--surface-action-4: var(--grey-1300, #191919);
-		--surface-action-hover: var(--blue-900, #095fa2);
-		--surface-action-hover-2: var(--grey-1100, #353534);
-		--surface-action-hover-3: var(--grey-1200, #1f1f1e);
-		--surface-action-hover-4: var(--grey-1100, #353534);
-		--surface-action-pressed: var(--blue-1000, #074779);
-		--surface-action-pressed-2: var(--grey-1000, #525250);
-		--surface-action-pressed-3: var(--grey-1100, #353534);
-		--surface-action-pressed-4: var(--grey-1000, #525250);
-		--surface-backdrop: var(--grey-1400, #0e0e0e);
-		--surface-disabled: var(--grey-1100, #353534);
-		--surface-disabled-selected: var(--grey-700, #b3b3b1);
-		--surface-information: var(--grey-200, #fafaf9);
-		--surface-information-2: var(--blue-1200, #021828);
-		--surface-information-hover-2: var(--blue-1100, #043051);
-		--surface-information-selected-2: var(--blue-1300, #01111d);
-		--surface-page: var(--grey-1300, #191919);
-		--surface-primary: var(--grey-1200, #1f1f1e);
-		--surface-secondary: var(--grey-1300, #191919);
-		--text-action: var(--grey-500, #dcdcdb);
-		--text-action-hover: var(--grey-500, #dcdcdb);
-		--text-body: var(--grey-500, #dcdcdb);
-		--text-body-2: var(--grey-600, #d3d3d1);
-		--text-body-3: var(--grey-700, #b3b3b1);
-		--text-body-4: var(--grey-800, #868684);
-		--text-disabled: var(--grey-800, #868684);
-		--text-error: var(--red-400, #f97066);
-		--text-headings: var(--grey-300, #f5f5f4);
-		--text-information: var(--blue-600, #85bbe5);
-		--text-on-action: var(--pure-white, #ffffff);
-		--text-on-disabled: var(--grey-700, #b3b3b1);
-		--text-on-information: var(--grey-1200, #1f1f1e);
-		--text-on-information-2: var(--grey-1100, #353534);
+		--icon-action-2: var(--neutral-400);
+		--icon-action-2-on-color: var(--neutral-1000);
+		--icon-action-hover-2: var(--neutral-300);
+		--icon-action-hover-2-on-color: var(--neutral-1100);
+		--icon-body: var(--neutral-300);
+		--icon-body-2: var(--neutral-600);
+		--icon-body-2-on-color: var(--neutral-1000);
+		--icon-body-3: var(--neutral-700);
+		--icon-body-3-on-color: var(--neutral-900);
+		--icon-body-4: var(--neutral-800);
+		--icon-body-4-on-color: var(--neutral-800);
+		--icon-body-on-color: var(--neutral-1500);
+		--icon-disabled: var(--neutral-800);
+		--icon-error: var(--error-400);
+		--icon-error-hover: var(--error-300);
+		--icon-headings: var(--neutral-300);
+		--icon-headings-on-color: var(--neutral-1600);
+		--icon-hero: var(--neutral-300);
+		--icon-hero-on-color: var(--neutral-1600);
+		--icon-information: var(--primary-600);
+		--icon-information-hover: var(--primary-500);
+		--icon-on-action: var(--neutral-white);
+		--icon-on-disabled: var(--neutral-700);
+		--icon-placeholder: var(--neutral-800);
+		--icon-placeholder-on-color: var(--neutral-700);
+		--icon-success: var(--success-400);
+		--icon-success-hover: var(--success-300);
+		--icon-warning: var(--warning-500);
+		--icon-warning-hover: var(--warning-400);
+		--surface-action: var(--primary-default);
+		--surface-action-2: var(--neutral-1200);
+		--surface-action-3: var(--neutral-1300);
+		--surface-action-4: var(--neutral-1500);
+		--surface-action-hover: var(--primary-900);
+		--surface-action-hover-2: var(--neutral-1100);
+		--surface-action-hover-3: var(--neutral-1200);
+		--surface-action-hover-4: var(--neutral-1100);
+		--surface-action-pressed: var(--primary-1000);
+		--surface-action-pressed-2: var(--neutral-1000);
+		--surface-action-pressed-3: var(--neutral-1100);
+		--surface-action-pressed-4: var(--neutral-1000);
+		--surface-backdrop: var(--grey-1600);
+		--surface-disabled: var(--neutral-1200);
+		--surface-disabled-selected: var(--neutral-700);
+		--surface-error: var(--error-900);
+		--surface-information: var(--primary-1200);
+		--surface-information-hover: var(--primary-1100);
+		--surface-information-selected: var(--primary-1300);
+		--surface-page: var(--neutral-1500);
+		--surface-primary: var(--neutral-1400);
+		--surface-secondary: var(--neutral-1500);
+		--surface-tertiary: var(--neutral-200);
+		--text-action-2: var(--neutral-400);
+		--text-action-2-on-color: var(--neutral-1000);
+		--text-action-hover-2: var(--neutral-300);
+		--text-action-hover-2-on-color: var(--neutral-1100);
+		--text-body: var(--neutral-300);
+		--text-body-2: var(--neutral-600);
+		--text-body-2-on-color: var(--neutral-1000);
+		--text-body-3: var(--neutral-700);
+		--text-body-3-on-color: var(--neutral-900);
+		--text-body-4: var(--neutral-800);
+		--text-body-4-on-color: var(--neutral-800);
+		--text-body-on-color: var(--neutral-1500);
+		--text-disabled: var(--neutral-800);
+		--text-error: var(--error-400);
+		--text-error-hover: var(--error-300);
+		--text-headings: var(--neutral-300);
+		--text-headings-on-color: var(--neutral-1600);
+		--text-hero: var(--neutral-300);
+		--text-hero-on-color: var(--neutral-1600);
+		--text-information: var(--primary-600);
+		--text-information-hover: var(--primary-500);
+		--text-on-action: var(--neutral-white);
+		--text-on-disabled: var(--neutral-700);
+		--text-placeholder: var(--neutral-800);
+		--text-placeholder-on-color: var(--neutral-700);
+		--text-success: var(--success-400);
+		--text-success-hover: var(--success-400);
+		--text-warning: var(--warning-500);
+		--text-warning-hover: var(--warning-400);
 	}
 
 	--device-size-frame: 1280px;
