--- a/projects/test-app/src/app/stand/stand.component.scss
+++ b/projects/test-app/src/app/stand/stand.component.scss
@@ -87,3 +87,10 @@ ss-lib-button {
 	object-fit: cover;
 	display: block;
 }
+
+.hint {
+	width: 500px;
+	height: 200px;
+	display: flex;
+	gap: 15px;
+}
