--- a/projects/test-app/src/app/test-modal/test-modal.component.html
+++ b/projects/test-app/src/app/test-modal/test-modal.component.html
@@ -9,11 +9,111 @@
 	[descriptionHeader]="'Какой то description'"
 	[actionsRef]="actions"
 	[contentRef]="contentRef"
+	[stickyRef]="stickyRef"
 	(closeEmit)="close()"
 >
 </ss-lib-modal>
 
+<ng-template #stickyRef>
+	<ss-lib-form-field
+		[label]="'Название'"
+		[hint]="'Подсказка'"
+		[errorText]="'Неверно заполнено'"
+		[showValidationFieldIcon]="true"
+	>
+		<ss-lib-input
+			fieldCtrl
+			[formControl]="inputCtrl"
+			[placeholder]="'oleg@mail.ru'"
+		/>
+	</ss-lib-form-field>
+</ng-template>
+
 <ng-template #contentRef>
+	<ss-lib-form-field
+		[label]="'Название'"
+		[hint]="'Подсказка'"
+		[errorText]="'Неверно заполнено'"
+		[showValidationFieldIcon]="true"
+	>
+		<ss-lib-input
+			fieldCtrl
+			[formControl]="inputCtrl"
+			[placeholder]="'oleg@mail.ru'"
+		/>
+	</ss-lib-form-field>
+	<ss-lib-form-field
+		[label]="'Название'"
+		[hint]="'Подсказка'"
+		[errorText]="'Неверно заполнено'"
+		[showValidationFieldIcon]="true"
+	>
+		<ss-lib-input
+			fieldCtrl
+			[formControl]="inputCtrl"
+			[placeholder]="'oleg@mail.ru'"
+		/>
+	</ss-lib-form-field>
+	<ss-lib-form-field
+		[label]="'Название'"
+		[hint]="'Подсказка'"
+		[errorText]="'Неверно заполнено'"
+		[showValidationFieldIcon]="true"
+	>
+		<ss-lib-input
+			fieldCtrl
+			[formControl]="inputCtrl"
+			[placeholder]="'oleg@mail.ru'"
+		/>
+	</ss-lib-form-field>
+	<ss-lib-form-field
+		[label]="'Название'"
+		[hint]="'Подсказка'"
+		[errorText]="'Неверно заполнено'"
+		[showValidationFieldIcon]="true"
+	>
+		<ss-lib-input
+			fieldCtrl
+			[formControl]="inputCtrl"
+			[placeholder]="'oleg@mail.ru'"
+		/>
+	</ss-lib-form-field>
+	<ss-lib-form-field
+		[label]="'Название'"
+		[hint]="'Подсказка'"
+		[errorText]="'Неверно заполнено'"
+		[showValidationFieldIcon]="true"
+	>
+		<ss-lib-input
+			fieldCtrl
+			[formControl]="inputCtrl"
+			[placeholder]="'oleg@mail.ru'"
+		/>
+	</ss-lib-form-field>
+	<ss-lib-form-field
+		[label]="'Название'"
+		[hint]="'Подсказка'"
+		[errorText]="'Неверно заполнено'"
+		[showValidationFieldIcon]="true"
+	>
+		<ss-lib-input
+			fieldCtrl
+			[formControl]="inputCtrl"
+			[placeholder]="'oleg@mail.ru'"
+		/>
+	</ss-lib-form-field>
+	<ss-lib-form-field
+		[label]="'Название'"
+		[hint]="'Подсказка'"
+		[errorText]="'Неверно заполнено'"
+		[showValidationFieldIcon]="true"
+	>
+		<ss-lib-input
+			fieldCtrl
+			[formControl]="inputCtrl"
+			[placeholder]="'oleg@mail.ru'"
+		/>
+	</ss-lib-form-field>
 	<ss-lib-form-field
 		[label]="'Название'"
 		[hint]="'Подсказка'"
