--- a/projects/front-components/src/lib/components/badge-info/badge-info.component.html
+++ b/projects/front-components/src/lib/components/badge-info/badge-info.component.html
@@ -1,5 +1,13 @@
-<div class="ss-lib-badge-info">
-	<div class="ss-lib-badge-info__left">
+<div
+	class="ss-lib-badge-info"
+	[style.justify-content]="
+		closePosition() === CloseIconPosition.Start ? 'start' : 'space-between'
+	"
+>
+	<div
+		class="ss-lib-badge-info__info-block"
+		[style.order]="closePosition() === CloseIconPosition.Start ? 2 : 1"
+	>
 		<ss-lib-badge
 			*ngIf="badge() as props"
 			[badgeProps]="props"
@@ -28,6 +36,7 @@
 	<ss-lib-close-button
 		*ngIf="viewClose()"
 		class="ss-lib-badge-info__close"
+		[style.order]="closePosition() === CloseIconPosition.Start ? 1 : 2"
 		[restrictedIcon]="IconType.Close"
 		[size]="ExtraSize.xl"
 		[type]="ButtonType.CloseLight"
