--- a/projects/front-components/src/lib/components/icon/icon.component.scss
+++ b/projects/front-components/src/lib/components/icon/icon.component.scss
@@ -4,4 +4,10 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
+
+	&:focus-visible {
+		outline: none;
+		box-shadow: var(--focus-rings-focus-ring);
+		border-radius: 4px;
+	}
 }
