--- a/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
@@ -1,84 +1,86 @@
 /* Alias */
 :root {
-	--error-100: var(--red-100, #fee4e2);
-	--error-200: var(--red-200, #fecdca);
-	--error-25: var(--red-25, #fffbfa);
-	--error-300: var(--red-300, #fda29b);
-	--error-400: var(--red-400, #f97066);
-	--error-50: var(--red-50, #fef3f2);
-	--error-500: var(--red-500, #f04438);
-	--error-600: var(--red-600, #d92d20);
-	--error-700: var(--red-700, #b42318);
-	--error-800: var(--red-800, #912018);
-	--error-900: var(--red-900, #7a271a);
-	--error-950: var(--red-950, #55160c);
-	--neutral-100: var(--grey-100, #fcfcfc);
-	--neutral-1000: var(--grey-1000, #525250);
-	--neutral-1100: var(--grey-1100, #353534);
-	--neutral-1200: var(--grey-1200, #1f1f1e);
-	--neutral-1300: var(--grey-1300, #191919);
-	--neutral-1400: var(--grey-1400, #0e0e0e);
-	--neutral-200: var(--grey-200, #fafaf9);
-	--neutral-300: var(--grey-300, #f5f5f4);
-	--neutral-400: var(--grey-400, #ebebea);
-	--neutral-500: var(--grey-500, #dcdcdb);
-	--neutral-600: var(--grey-600, #d3d3d1);
-	--neutral-700: var(--grey-700, #b3b3b1);
-	--neutral-800: var(--grey-800, #868684);
-	--neutral-900: var(--grey-900, #686866);
-	--neutral-black: var(--pure-black, #000000);
-	--neutral-white: var(--pure-white, #ffffff);
-	--primary-100: var(--blue-100, #fbfdfe);
-	--primary-1000: var(--blue-1000, #074779);
-	--primary-1100: var(--blue-1100, #043051);
-	--primary-1200: var(--blue-1200, #021828);
-	--primary-1300: var(--blue-1300, #01111d);
-	--primary-200: var(--blue-200, #f7fafd);
-	--primary-300: var(--blue-300, #f3f8fc);
-	--primary-400: var(--blue-400, #e2eff8);
-	--primary-500: var(--blue-500, #b6d7ef);
-	--primary-600: var(--blue-600, #85bbe5);
-	--primary-700: var(--blue-700, #3c92d5);
-	--primary-900: var(--blue-900, #095fa2);
-	--primary-default: var(--blue-800, #0b77ca);
-	--success-100: var(--green-100, #dcfae6);
-	--success-200: var(--green-200, #abefc6);
-	--success-25: var(--green-25, #f6fef9);
-	--success-300: var(--green-300, #75e0a7);
-	--success-400: var(--green-400, #47cd89);
-	--success-50: var(--green-50, #ecfdf3);
-	--success-500: var(--green-500, #17b26a);
-	--success-600: var(--green-600, #079455);
-	--success-700: var(--green-700, #067647);
-	--success-800: var(--green-800, #085d3a);
-	--success-900: var(--green-900, #074d31);
-	--success-950: var(--green-950, #053321);
-	--warning-100: var(--yellow-100, #fef0c7);
-	--warning-200: var(--yellow-200, #fedf89);
-	--warning-25: var(--yellow-25, #fffcf5);
-	--warning-300: var(--yellow-300, #fec84b);
-	--warning-400: var(--yellow-400, #fdb022);
-	--warning-50: var(--yellow-50, #fffaeb);
-	--warning-500: var(--yellow-500, #f79009);
-	--warning-600: var(--yellow-600, #dc6803);
-	--warning-700: var(--yellow-700, #b54708);
-	--warning-800: var(--yellow-800, #93370d);
-	--warning-900: var(--yellow-900, #7a2e0e);
-	--warning-950: var(--yellow-950, #4e1d09);
+	--error-100: var(--red-100);
+	--error-200: var(--red-200);
+	--error-25: var(--red-25);
+	--error-300: var(--red-300);
+	--error-400: var(--red-400);
+	--error-50: var(--red-50);
+	--error-500: var(--red-500);
+	--error-600: var(--red-600);
+	--error-700: var(--red-700);
+	--error-800: var(--red-800);
+	--error-900: var(--red-900);
+	--error-950: var(--red-950);
+	--neutral-100: var(--grey-100);
+	--neutral-1000: var(--grey-1000);
+	--neutral-1100: var(--grey-1100);
+	--neutral-1200: var(--grey-1200);
+	--neutral-1300: var(--grey-1300);
+	--neutral-1400: var(--grey-1400);
+	--neutral-1500: var(--grey-1500);
+	--neutral-1600: var(--grey-1600);
+	--neutral-200: var(--grey-200);
+	--neutral-300: var(--grey-300);
+	--neutral-400: var(--grey-400);
+	--neutral-500: var(--grey-500);
+	--neutral-600: var(--grey-600);
+	--neutral-700: var(--grey-700);
+	--neutral-800: var(--grey-800);
+	--neutral-900: var(--grey-900);
+	--neutral-black: var(--pure-black);
+	--neutral-white: var(--pure-white);
+	--primary-100: var(--blue-100);
+	--primary-1000: var(--blue-1000);
+	--primary-1100: var(--blue-1100);
+	--primary-1200: var(--blue-1200);
+	--primary-1300: var(--blue-1300);
+	--primary-200: var(--blue-200);
+	--primary-300: var(--blue-300);
+	--primary-400: var(--blue-400);
+	--primary-500: var(--blue-500);
+	--primary-600: var(--blue-600);
+	--primary-700: var(--blue-700);
+	--primary-900: var(--blue-900);
+	--primary-default: var(--blue-800);
+	--success-100: var(--green-100);
+	--success-200: var(--green-200);
+	--success-25: var(--green-25);
+	--success-300: var(--green-300);
+	--success-400: var(--green-400);
+	--success-50: var(--green-50);
+	--success-500: var(--green-500);
+	--success-600: var(--green-600);
+	--success-700: var(--green-700);
+	--success-800: var(--green-800);
+	--success-900: var(--green-900);
+	--success-950: var(--green-950);
+	--warning-100: var(--yellow-100);
+	--warning-200: var(--yellow-200);
+	--warning-25: var(--yellow-25);
+	--warning-300: var(--yellow-300);
+	--warning-400: var(--yellow-400);
+	--warning-50: var(--yellow-50);
+	--warning-500: var(--yellow-500);
+	--warning-600: var(--yellow-600);
+	--warning-700: var(--yellow-700);
+	--warning-800: var(--yellow-800);
+	--warning-900: var(--yellow-900);
+	--warning-950: var(--yellow-950);
 	/* number */
-	--border-radius-none: var(--scale-0, 0px);
-	--border-radius-xxs: var(--scale-0-5-2px, 2px);
-	--border-radius-xs: var(--scale-1-4px, 4px);
-	--border-radius-sm: var(--scale-1-5-6px, 6px);
-	--border-radius-md: var(--scale-2-8px, 8px);
-	--border-radius-lg: var(--scale-2-5-10px, 10px);
-	--border-radius-xl: var(--scale-3-12px, 12px);
-	--border-radius-2xl: var(--scale-4-16px, 16px);
-	--border-radius-3-xl: var(--scale-5-20px, 20px);
-	--border-radius-4-xl: var(--scale-6-24px, 24px);
-	--border-radius-round: var(--scale-unlimited-9999px, 9999px);
-	--border-width-none: var(--scale-0, 0px);
-	--border-width-sm: var(--scale-0-25-1px, 1px);
-	--border-width-md: var(--scale-0-5-2px, 2px);
-	--border-width-lg: var(--scale-1-4px, 4px);
+	--border-radius-none: var(--scale-0);
+	--border-radius-xxs: var(--scale-0-5-2px);
+	--border-radius-xs: var(--scale-1-4px);
+	--border-radius-sm: var(--scale-1-5-6px);
+	--border-radius-md: var(--scale-2-8px);
+	--border-radius-lg: var(--scale-2-5-10px);
+	--border-radius-xl: var(--scale-3-12px);
+	--border-radius-2xl: var(--scale-4-16px);
+	--border-radius-3-xl: var(--scale-5-20px);
+	--border-radius-4-xl: var(--scale-6-24px);
+	--border-radius-round: var(--scale-unlimited-9999px);
+	--border-width-none: var(--scale-0);
+	--border-width-sm: var(--scale-0-25-1px);
+	--border-width-md: var(--scale-0-5-2px);
+	--border-width-lg: var(--scale-1-4px);
 }
