--- a/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_brand.scss
@@ -28,9 +28,11 @@
 	--grey-100: #fcfcfc;
 	--grey-1000: #525250;
 	--grey-1100: #353534;
-	--grey-1200: #1f1f1e;
-	--grey-1300: #191919;
-	--grey-1400: #0e0e0e;
+	--grey-1200: #2c2c2b;
+	--grey-1300: #262625;
+	--grey-1400: #1f1f1e;
+	--grey-1500: #191919;
+	--grey-1600: #0e0e0e;
 	--grey-200: #fafaf9;
 	--grey-300: #f5f5f4;
 	--grey-400: #ebebea;
@@ -66,41 +68,41 @@
 	--yellow-900: #7a2e0e;
 	--yellow-950: #4e1d09;
 	/* number */
-	--scale-0: 0px;
-	--scale-0-25-1px: 1px;
-	--scale-0-5-2px: 2px;
-	--scale-1-4px: 4px;
-	--scale-1-5-6px: 6px;
-	--scale-2-8px: 8px;
-	--scale-2-5-10px: 10px;
-	--scale-3-12px: 12px;
-	--scale-4-16px: 16px;
-	--scale-5-20px: 20px;
-	--scale-6-24px: 24px;
-	--scale-8-32px: 32px;
-	--scale-10-40px: 40px;
-	--scale-12-48px: 48px;
-	--scale-16-64px: 64px;
-	--scale-20-80px: 80px;
-	--scale-24-96px: 96px;
-	--scale-32-128px: 128px;
-	--scale-40-160px: 160px;
-	--scale-48-192px: 192px;
-	--scale-56-224px: 224px;
-	--scale-64-256px: 256px;
-	--scale-80-320px: 320px;
-	--scale-96-384px: 384px;
-	--scale-120-480px: 480px;
-	--scale-140-560px: 560px;
-	--scale-160-640px: 640px;
-	--scale-180-720px: 720px;
-	--scale-192-768px: 768px;
-	--scale-256-1024px: 1024px;
-	--scale-320-1280px: 1280px;
-	--scale-360-1440px: 1440px;
-	--scale-400-1600px: 1600px;
-	--scale-480-1920px: 1920px;
-	--scale-unlimited-9999px: 9999px;
+	--scale-0: 0rem;
+	--scale-0-25-1px: 0.0625rem;
+	--scale-0-5-2px: 0.125rem;
+	--scale-1-4px: 0.25rem;
+	--scale-1-5-6px: 0.375rem;
+	--scale-2-8px: 0.5rem;
+	--scale-2-5-10px: 0.625rem;
+	--scale-3-12px: 0.75rem;
+	--scale-4-16px: 1rem;
+	--scale-5-20px: 1.25rem;
+	--scale-6-24px: 1.5rem;
+	--scale-8-32px: 2rem;
+	--scale-10-40px: 2.5rem;
+	--scale-12-48px: 3rem;
+	--scale-16-64px: 4rem;
+	--scale-20-80px: 5rem;
+	--scale-24-96px: 6rem;
+	--scale-32-128px: 8rem;
+	--scale-40-160px: 10rem;
+	--scale-48-192px: 12rem;
+	--scale-56-224px: 14rem;
+	--scale-64-256px: 16rem;
+	--scale-80-320px: 20rem;
+	--scale-96-384px: 24rem;
+	--scale-120-480px: 30rem;
+	--scale-140-560px: 35rem;
+	--scale-160-640px: 40rem;
+	--scale-180-720px: 45rem;
+	--scale-192-768px: 48rem;
+	--scale-256-1024px: 64rem;
+	--scale-320-1280px: 80rem;
+	--scale-360-1440px: 90rem;
+	--scale-400-1600px: 100rem;
+	--scale-480-1920px: 120rem;
+	--scale-unlimited-9999px: 624.9375rem;
 	/* string */
 	--type-font-family-body: onest;
 	--type-font-family-heading: onest;
