--- a/projects/front-components/src/lib/components/input/input.component.html
+++ b/projects/front-components/src/lib/components/input/input.component.html
@@ -13,7 +13,7 @@
 		[placeholder]="placeholder()"
 		[readOnly]="readOnly()"
 	/>
-	@if (viewCloseButton) {
+	@if (viewClearButton) {
 		<ss-lib-close-button
 			[size]="ExtraSize.xs"
 			(click)="clearControl()"
