--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -728,7 +728,7 @@
 			fieldCtrl
 			[formControl]="inputCtrl"
 			[placeholder]="'oleg@mail.ru'"
-			[closeButton]="true"
+			[clearButton]="true"
 		/>
 	</ss-lib-form-field>
 </div>
