--- a/projects/front-components/src/lib/components/help-hint/hint.component.html
+++ b/projects/front-components/src/lib/components/help-hint/hint.component.html
@@ -1,5 +1,6 @@
 <div
-	class="ss-lib-help-hint"
+	class="ss-lib-hint"
+	tabindex="0"
 	(mouseleave)="isHover.set(false)"
 	(mouseenter)="isHover.set(true)"
 >
