--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -692,27 +692,27 @@
 ></ss-lib-button>
 
 <div class="hint">
-	<ss-lib-help-hint
+	<ss-lib-hint
 		[icon]="IconType.Info"
 		[type]="HelpHintType.Default"
-	></ss-lib-help-hint>
-	<ss-lib-help-hint
+	></ss-lib-hint>
+	<ss-lib-hint
 		[icon]="IconType.Info"
 		[type]="HelpHintType.Success"
-	></ss-lib-help-hint>
-	<ss-lib-help-hint
+	></ss-lib-hint>
+	<ss-lib-hint
 		[icon]="IconType.Info"
 		[type]="HelpHintType.Warning"
-	></ss-lib-help-hint>
-	<ss-lib-help-hint
+	></ss-lib-hint>
+	<ss-lib-hint
 		[icon]="IconType.Info"
 		[type]="HelpHintType.Error"
-	></ss-lib-help-hint>
-	<ss-lib-help-hint
+	></ss-lib-hint>
+	<ss-lib-hint
 		[icon]="IconType.Info"
 		[type]="HelpHintType.Warning"
 		[disabled]="true"
-	></ss-lib-help-hint>
+	></ss-lib-hint>
 </div>
 
 <div class="input">
