--- a/projects/front-components/src/lib/components/form-field/form-field.component.html
+++ b/projects/front-components/src/lib/components/form-field/form-field.component.html
@@ -57,7 +57,7 @@
 				</div>
 			</div>
 			@if (currentFieldCtrlState() !== ControlState.Invalid) {
-				<ss-lib-help-hint
+				<ss-lib-hint
 					ss-lib-tooltip
 					[tooltipText]="tooltipInfoText()"
 					[icon]="IconType.Help"
@@ -66,7 +66,7 @@
 
 			@if (showValidationFieldIcon()) {
 				<div class="field-container__error-icon">
-					<ss-lib-help-hint
+					<ss-lib-hint
 						ss-lib-tooltip
 						[tooltipText]="errorText()"
 						[icon]="IconType.Alert"
