feature/3353: add checkboxes to table, add visible columns logic

--- a/projects/front-components/src/lib/components/table/th-group/th-group.component.html
+++ b/projects/front-components/src/lib/components/table/th-group/th-group.component.html
@@ -1,3 +1,5 @@
+<ng-content />
+<!--<pre>1213{{ heads123() | json }}</pre>-->
 @for (key of table.columns(); track key) {
 	<ng-container
 		[ngTemplateOutlet]="
@@ -10,10 +12,11 @@
 	#plain
 	let-key
 >
-	<!--	@if (!th && !heads.length) {-->
-	@if (!heads.length) {
-		<th ssTh>
-			{{ key.toString() }}
-		</th>
+	@if (!th() && !heads().length) {
+		@if (!heads.length) {
+			<th ssTh>
+				{{ key.toString() }}
+			</th>
+		}
 	}
 </ng-template>
