--- a/projects/front-components/src/lib/components/table/th/th.component.scss
+++ b/projects/front-components/src/lib/components/table/th/th.component.scss
@@ -1,46 +1,52 @@
 th:first-child {
-  border-radius: 8px 0 0 0;
+	border-radius: 8px 0 0 0;
 }
 
 th:last-child {
-  border-radius: 0 8px 0 0;
+	border-radius: 0 8px 0 0;
 }
-
 
 :host {
-  background-color: var(--surface-information-2);
-  border-bottom: 1px solid var(--border-primary);
-  height: 41px;
-  position: relative;
-  //overflow: auto;
-  //min-width: 500px;
+	background-color: var(--surface-information-2);
+	//border-bottom: 1px solid var(--border-primary);
+	height: 41px;
+	position: relative;
+	//overflow: auto;
+	//min-width: 500px;
+	border: 1px solid var(--border-primary);
 
-  &:first-child {
-    border-radius: 8px 0 0 0;
-  }
+	&:not(:first-child) {
+		border-inline-start: none;
+	}
 
-  &:last-child {
-    border-radius: 0 8px 0 0;
-  }
+	&:first-child {
+		border-radius: 8px 0 0 0;
+	}
+
+	&:last-child {
+		border-radius: 0 8px 0 0;
+	}
 }
 
+:host-context(tr:not(:first-child)) {
+	border-block-start: none;
+}
 
 .t-bar {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: -1px;
-  inline-size: 3px;
-  justify-self: flex-end;
-  border-inline-start: 2px solid transparent;
-  background: red;
-  background-clip: content-box;
-  cursor: ew-resize;
-  opacity: 0;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: -1px;
+	inline-size: 3px;
+	justify-self: flex-end;
+	border-inline-start: 2px solid transparent;
+	background: red;
+	background-clip: content-box;
+	cursor: ew-resize;
+	opacity: 0;
 
-  &:hover,
-  &:active {
-    opacity: 1;
-  }
+	&:hover,
+	&:active {
+		opacity: 1;
+	}
 }
-
