--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -678,145 +678,8 @@
 
 <!--{{ offset() }}-->
 
-<ss-lib-utility-button [popoverTriggerFor]="dropdownColumn" />
-
-<ss-lib-dropdown-list
-	#dropdownColumn
-	[isDraggable]="true"
-	(dropItem)="onDropItem($event)"
->
-	@for (column of columns(); track column) {
-		<ss-lib-dropdown-item>
-			<div class="column-item__content">
-				<ss-lib-checkbox></ss-lib-checkbox>
-
-				<ss-lib-text
-					[type]="TextType.BodySm"
-					[weight]="TextWeight.Regular"
-					[color]="Colors.TextBody3"
-				>
-					{{ column }}
-				</ss-lib-text>
-
-				<ss-lib-icon
-					[height]="'16'"
-					[width]="'16'"
-					[icon]="IconType.Drag"
-				/>
-			</div>
-		</ss-lib-dropdown-item>
-	}
-</ss-lib-dropdown-list>
-
-<div class="new-table">
-	<table
-		ssTable
-		class="ss-table"
-		[columns]="columns()"
-	>
-		<thead>
-			<tr ssThGroup>
-				<th
-					*ssHead="'dragAction'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					dragAction1
-				</th>
-				<th
-					*ssHead="'order'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					order1
-				</th>
-				<th
-					*ssHead="'image'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					image1
-				</th>
-				<th
-					*ssHead="'banner'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					banner1
-				</th>
-				<th
-					*ssHead="'status'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					status1
-				</th>
-				<th
-					*ssHead="'actionToggle'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					actionToggle1
-				</th>
-				<th
-					*ssHead="'user'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					user1
-				</th>
-
-				<th
-					*ssHead="'period'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					period1
-				</th>
-				<th
-					*ssHead="'action'"
-					ssTh
-					[resizable]="true"
-					[style.min-width.px]="200"
-					[style.width.px]="200"
-				>
-					action1
-				</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ssTr>
-				<th *ssCell="'dragAction'">1</th>
-				<th *ssCell="'order'">2</th>
-				<th *ssCell="'image'">3</th>
-				<th *ssCell="'banner'">4</th>
-				<th *ssCell="'status'">5</th>
-				<th *ssCell="'actionToggle'">6</th>
-				<th *ssCell="'user'">7</th>
-				<th *ssCell="'period'">8</th>
-				<th *ssCell="'action'">9</th>
-			</tr>
-		</tbody>
-	</table>
-</div>
-<br />
-<br />
+<app-table-example></app-table-example>
+<br>
 
 <ss-lib-table>
 	<tr
