feature/3353: refactor method of drop item in table

--- a/projects/front-components/src/lib/components/table/th-group/th-group.component.html
+++ b/projects/front-components/src/lib/components/table/th-group/th-group.component.html
@@ -1,9 +1,8 @@
 <ng-content />
-<!--<pre>1213{{ heads123() | json }}</pre>-->
 @for (key of table.columns(); track key) {
 	<ng-container
 		[ngTemplateOutlet]="
-			(heads123()[key] && heads123()[key].template) || plain
+			(headByKey()[key] && headByKey()[key].template) || plain
 		"
 		[ngTemplateOutletContext]="{ $implicit: key }"
 	/>
