--- a/projects/test-app/src/app/table-example/table-example.component.html
+++ b/projects/test-app/src/app/table-example/table-example.component.html
@@ -49,7 +49,10 @@
 					[style.min-width.px]="200"
 					[style.width.px]="200"
 				>
-					<ss-lib-checkbox [formControl]="masterCheckboxControl" />
+					<ss-lib-checkbox
+						[formControl]="masterCheckboxCtrl"
+						[type]="masterCheckboxType()"
+					/>
 
 					<ss-lib-text
 						[color]="Colors.TextBody2"
