--- a/projects/front-components/src/lib/components/table/tr/tr.component.html
+++ b/projects/front-components/src/lib/components/table/tr/tr.component.html
@@ -1,23 +1,10 @@
-<!--<ng-container *ngIf="cells$ | async as items; else dummy">-->
-
 @for (key of table.columns(); track key) {
 	<ng-container
 		[ngTemplateOutlet]="
-			(cell123()[key] && cell123()[key].template) || plain
+			(cellByKey()[key] && cellByKey()[key].template) || plain
 		"
 		[ngTemplateOutletContext]="{ $implicit: key }"
 	>
-		<ng-template #plain>
-			<td>123</td>
-		</ng-template>
+		<ng-template #plain> </ng-template>
 	</ng-container>
 }
-
-<!--<ng-template #plain>-->
-<!--	<td-->
-<!--		tuiTd-->
-<!--	>-->
-<!--		{{ item[key] }}-->
-<!--	</td>-->
-<!--</ng-template>-->
-<!--</ng-container>-->
